<resources>
    <string name="app_name">Android Kalkulator-Domaci</string>
    <string name="clear_button">C</string>
    <string name="divide">÷</string>
    <string name="Multiplication">X</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="Button_7">7</string>
    <string name="Button_8">8</string>
    <string name="Button_9">9</string>
    <string name="Equlas_sign">=</string>
    <string name="Button3">3</string>
    <string name="Button2">2</string>
    <string name="Button_1">1</string>
    <string name="Button_0">0</string>
    <string name="Button_5">5</string>
    <string name="Button_6">6</string>
    <string name="Button_4">4</string>
</resources>